@@ -37,7 +37,8 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
     validateModel(bpmnModel);
   }
 
-  protected String getResource() {
+  @Override
+protected String getResource() {
     return "test.valueddataobjectmodel.json";
   }
 
@@ -50,7 +51,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
     // verify main process data objects
     List<ValuedDataObject> dataObjects = model.getMainProcess().getDataObjects();
     assertEquals(6, dataObjects.size());
-    for (ValuedDataObject dObj : dataObjects) {
+    dataObjects.forEach(dObj -> {
       if ("dObj1".equals(dObj.getId())) {
         assertEquals(StringDataObject.class, dObj.getClass());
         assertEquals("StringTest", dObj.getName());
@@ -62,7 +63,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertEquals("BooleanTest", dObj.getName());
         assertEquals("xsd:boolean", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Boolean);
-        assertEquals(new Boolean(true), dObj.getValue());
+        assertEquals(Boolean.valueOf(true), dObj.getValue());
       } else if ("dObj3".equals(dObj.getId())) {
         assertEquals(DateDataObject.class, dObj.getClass());
         assertEquals("DateTest", dObj.getName());
@@ -80,21 +81,21 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertEquals("DoubleTest", dObj.getName());
         assertEquals("xsd:double", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Double);
-        assertEquals(new Double(123456789), dObj.getValue());
+        assertEquals(Double.valueOf(123456789), dObj.getValue());
       } else if ("dObj5".equals(dObj.getId())) {
         assertEquals(IntegerDataObject.class, dObj.getClass());
         assertEquals("IntegerTest", dObj.getName());
         assertEquals("xsd:int", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Integer);
-        assertEquals(new Integer(123), dObj.getValue());
+        assertEquals(Integer.valueOf(123), dObj.getValue());
       } else if ("dObj6".equals(dObj.getId())) {
         assertEquals(LongDataObject.class, dObj.getClass());
         assertEquals("LongTest", dObj.getName());
         assertEquals("xsd:long", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Long);
-        assertEquals(new Long(-123456), dObj.getValue());
+        assertEquals(Long.valueOf(-123456), dObj.getValue());
       }
-    }
+    });
 
     flowElement = model.getMainProcess().getFlowElement("subprocess1", true);
     assertNotNull(flowElement);
@@ -106,7 +107,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
     // verify subprocess data objects
     dataObjects = ((SubProcess) flowElement).getDataObjects();
     assertEquals(6, dataObjects.size());
-    for (ValuedDataObject dObj : dataObjects) {
+    dataObjects.forEach(dObj -> {
       if ("dObj1".equals(dObj.getId())) {
         assertEquals(StringDataObject.class, dObj.getClass());
         assertEquals("SubStringTest", dObj.getName());
@@ -118,7 +119,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertEquals("SubBooleanTest", dObj.getName());
         assertEquals("xsd:boolean", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Boolean);
-        assertEquals(new Boolean(false), dObj.getValue());
+        assertEquals(Boolean.valueOf(false), dObj.getValue());
       } else if ("dObj3".equals(dObj.getId())) {
         assertEquals(DateDataObject.class, dObj.getClass());
         assertEquals("SubDateTest", dObj.getName());
@@ -134,21 +135,21 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertEquals("SubDoubleTest", dObj.getName());
         assertEquals("xsd:double", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Double);
-        assertEquals(new Double(678912345), dObj.getValue());
+        assertEquals(Double.valueOf(678912345), dObj.getValue());
       } else if ("dObj5".equals(dObj.getId())) {
         assertEquals(IntegerDataObject.class, dObj.getClass());
         assertEquals("SubIntegerTest", dObj.getName());
         assertEquals("xsd:int", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Integer);
-        assertEquals(new Integer(45), dObj.getValue());
+        assertEquals(Integer.valueOf(45), dObj.getValue());
       } else if ("dObj6".equals(dObj.getId())) {
         assertEquals(LongDataObject.class, dObj.getClass());
         assertEquals("SubLongTest", dObj.getName());
         assertEquals("xsd:long", dObj.getItemSubjectRef().getStructureRef());
         assertTrue(dObj.getValue() instanceof Long);
-        assertEquals(new Long(456123), dObj.getValue());
+        assertEquals(Long.valueOf(456123), dObj.getValue());
         assertEquals(1, dObj.getExtensionElements().size());
       }
-    }
+    });
   }
 }
